--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>  
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>CODETutorial Mean seed</title>
+  <title>Led Controller</title>
 </head>  
 <body>  
   <script src="lib/socket.io-client/socket.io.js"></script>
